# universal-adk-agent-starter-kit

./: CURRENT_STATUS.md  EXTRACTION_PROGRESS.md  EXTRACTION_SCRIPT.md  EXTRACTION_TRACKING.md  IMPLEMENTATION_PLAN.md  Makefile  Makefile.template  NEXT_STEPS.md  README.md  create_agent.py  extract.py  pyproject.toml  setup.py  starter-kit.yaml
.starter-kit/: README.md
.starter-kit/scripts/: setup_wizard.py
.starter-kit/templates/multi_agent/sub_agents/critic/: __init__.py  agent.py  prompt.py
.starter-kit/templates/multi_agent/sub_agents/reviser/: agent.py
.starter-kit/templates/rag_agent/: agent.py  prompts.py
.starter-kit/templates/simple_agent/: .env.example  __init__.py  agent.py  pyproject.toml.template  tools.py
.starter-kit/templates/tool_agent/: agent.py  tools.py
deployment/: README.md
deployment/terraform/: log_sinks.tf  providers.tf
docs/: QUICKSTART.md
examples/: INSTABIDS_EXAMPLE.md
src/: README.md
tests/: README.md
tests/core/: testing_utils.py
