[tool.poetry]
name = "universal-adk-agent-starter-kit"
version = "0.1.0"
description = "Universal starter kit for building Google ADK 1.0 agents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
google-adk = "^1.0"
google-cloud-aiplatform = "^1.60.0"
google-cloud-trace = "^1.13.0"
google-cloud-storage = "^2.18.0"
google-cloud-build = "^3.24.0"
pydantic = "^2.8.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-gcp-trace = "^1.6.0"
aiohttp = "^3.10.0"
tenacity = "^8.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.4.0"
ruff = "^0.5.0"
ipykernel = "^6.29.0"
jupyter = "^1.0.0"
nbconvert = "^7.16.0"

[tool.poetry.group.a2a]
optional = true

[tool.poetry.group.a2a.dependencies]
a2a-sdk = "^0.1.0"

[tool.poetry.group.rag]
optional = true

[tool.poetry.group.rag.dependencies]
langchain = "^0.2.0"
langchain-google-vertexai = "^1.0.0"
tiktoken = "^0.7.0"

[tool.poetry.group.agent-starter-pack]
optional = true

[tool.poetry.group.agent-starter-pack.dependencies]
agent-starter-pack = "^1.0.0"

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
